# ai-legal

./: .gitignore  nginx-config.conf
Backend/: .env  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
Backend/app/: config.py  main.py
Backend/app/models/: models.py
Backend/app/routers/: auth.py  chat.py  oauth.py
Backend/app/services/: auth_service.py  dify_service.py  oauth_service.py
Backend/app/static/css/: styles.css
Backend/app/static/js/: chat.js  main.js
Backend/app/templates/: chat.html  forgot-password.html  index.html  login.html  register.html  reset-password.html  verify-email.html
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Frontend/src/: App.css  App.jsx  index.css
Frontend/src/components/: LoadingSpinner.jsx
Frontend/src/contexts/: AuthContext.jsx
Frontend/src/pages/: AuthCallbackPage.jsx  ChatPage.jsx  ForgotPasswordPage.jsx  HomePage.jsx  LoginPage.jsx  RegisterPage.jsx  ResetPasswordPage.jsx  VerifyEmailPage.jsx
Frontend/src/services/: api.js
